--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Lambda
 
 on:
   push:
-    branches: [ main ]          # adjust if needed
+    branches: [ master ]          # adjust if needed
 
 permissions:
   id-token: write               # OIDC token
