--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      AWS_REGION: ${{ secrets.AWS_REGION || 'us-west-2' }}
+      AWS_REGION: us-east-2    
 
     steps:
       - uses: actions/checkout@v4
