--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,14 +42,12 @@ jobs:
           cp -v *.py build/
         fi
 
-        # always build wheels compatible with Lambda (AL2, Python 3.12, x86_64)
+        # Install dependencies compatible with Lambda runtime
         if [ -s requirements.txt ]; then
           pip install -r requirements.txt \
             --platform manylinux_2_17_x86_64 \
             --python-version 3.11 \
             --implementation cp \
-            --only-binary=:all: \
-            --no-deps \
             --upgrade -t build
         fi
 
