--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,14 +42,9 @@ jobs:
           cp -v *.py build/
         fi
 
-        # Install dependencies compatible with Lambda runtime
+        # Install dependencies
         if [ -s requirements.txt ]; then
-          pip install -r requirements.txt \
-            --platform manylinux_2_17_x86_64 \
-            --python-version 3.11 \
-            --implementation cp \
-            --no-deps \
-            --upgrade -t build
+          pip install -r requirements.txt --upgrade -t build
         fi
 
         cd build
